<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rv"
    android:layout_marginStart="@dimen/dimen_medium_8dp"
    android:layout_marginEnd="@dimen/dimen_medium_8dp"
    android:layout_marginTop="@dimen/dimen_medium_8dp"
    android:layout_marginBottom="@dimen/dimen_medium_8dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_margin="@dimen/dimen_medium_8dp"
        android:layout_width="@dimen/frogo_rv_dimen_50dp"
        android:layout_height="@dimen/frogo_rv_dimen_50dp"
        android:src="@drawable/ic_home_black_24dp"/>
    
    <TextView
        android:id="@+id/orderan"
        android:layout_marginTop="@dimen/dimen_big_16dp"
        android:layout_marginStart="@dimen/frogo_rv_dimen_20dp"
        android:layout_toEndOf="@id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_orderan"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/text_size_title_small_18sp"/>
    <TextView
        android:id="@+id/hint"
        android:layout_marginTop="@dimen/dimen_big_16dp"
        android:layout_marginStart="@dimen/dimen_small_4dp"
        android:layout_toEndOf="@id/orderan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pager"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/text_size_title_small_18sp"/>
    <TextView
        android:id="@+id/jumlah_order_ke"
        android:layout_marginTop="@dimen/dimen_big_16dp"
        android:layout_toEndOf="@id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1200"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/text_size_title_small_18sp"/>

    <TextView
        android:id="@+id/txt_pemesan"
        android:layout_marginTop="@dimen/dimen_medium_8dp"
        android:layout_marginStart="@dimen/frogo_rv_dimen_20dp"
        android:layout_toEndOf="@id/icon"
        android:layout_below="@id/jumlah_order_ke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pemesan"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/text_size_title_small_18sp"/>
    <TextView
        android:id="@+id/hint2"
        android:layout_marginTop="@dimen/dimen_medium_8dp"
        android:layout_marginStart="@dimen/dimen_big_16dp"
        android:layout_toEndOf="@id/txt_pemesan"
        android:layout_below="@id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titikdua"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/text_size_title_small_18sp"/>
    <TextView
        android:id="@+id/id_nama_pemesan"
        android:layout_marginTop="@dimen/dimen_medium_8dp"
        android:layout_toEndOf="@id/hint2"
        android:layout_below="@id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_muhamad_ikhsan_ramadhan"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/text_size_medium_16sp"/>

    <TextView
        android:id="@+id/txt_alamat"
        android:layout_marginTop="@dimen/dimen_medium_8dp"
        android:layout_marginStart="@dimen/frogo_rv_dimen_20dp"
        android:layout_toEndOf="@id/icon"
        android:layout_below="@id/txt_pemesan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_alamat"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/text_size_title_small_18sp"/>
    <TextView
        android:id="@+id/hint3"
        android:layout_marginTop="@dimen/dimen_medium_8dp"
        android:layout_marginStart="@dimen/frogo_rv_dimen_34dp"
        android:layout_toEndOf="@id/txt_alamat"
        android:layout_below="@id/hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titikdua"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/text_size_title_small_18sp"/>
    <TextView
        android:id="@+id/id_alamat"
        android:layout_marginTop="@dimen/dimen_medium_8dp"
        android:layout_toEndOf="@id/hint3"
        android:layout_below="@id/hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_cicadas"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/text_size_medium_16sp"/>


    <TextView
        android:id="@+id/txt_nohp"
        android:layout_marginTop="@dimen/dimen_medium_8dp"
        android:layout_marginStart="@dimen/frogo_rv_dimen_20dp"
        android:layout_toEndOf="@id/icon"
        android:layout_below="@id/txt_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nohp"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/text_size_title_small_18sp"/>
    <TextView
        android:id="@+id/hint4"
        android:layout_marginTop="@dimen/dimen_medium_8dp"
        android:layout_marginStart="@dimen/frogo_rv_dimen_34dp"
        android:layout_toEndOf="@id/txt_nohp"
        android:layout_below="@id/hint3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titikdua"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/text_size_title_small_18sp"/>
    <TextView
        android:id="@+id/id_no_hp"
        android:layout_marginTop="@dimen/dimen_medium_8dp"
        android:layout_marginBottom="@dimen/dimen_medium_8dp"
        android:layout_toEndOf="@id/hint3"
        android:layout_below="@id/hint3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_nohp"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/text_size_medium_16sp"/>



</RelativeLayout>