<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_medium_8dp"
    android:background="@drawable/bg_rv2"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/makanan_foto"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="0.5"
        android:src="@drawable/ic_dummy_photo"
        android:layout_marginTop="@dimen/dimen_big_16dp"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen_big_16dp"
        android:layout_marginEnd="@dimen/dimen_medium_8dp">

        <TextView
            android:id="@+id/makanan_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_dummy_makanan"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_title_small_18sp"/>

        <TextView
            android:id="@+id/textview5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_dummy_deskripsi"
            android:layout_marginTop="@dimen/dimen_medium_8dp"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="@dimen/text_size_default_12sp"/>
        <TextView
            android:id="@+id/makanan_harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_harga"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_default_12sp"
            android:layout_marginTop="@dimen/dimen_medium_8dp"
            android:layout_marginBottom="@dimen/dimen_medium_8dp"/>


    </LinearLayout>

</LinearLayout>