<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".view.activity.DetailPesananMasukActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_medium_8dp"
        android:layout_marginEnd="@dimen/dimen_medium_8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_medium_8dp"
                android:layout_marginTop="@dimen/dimen_medium_8dp"
                android:text="@string/txt_detail_pesanan"
                android:textColor="@color/colorTextWhite"
                android:textSize="@dimen/text_size_title_medium_20sp" />

            <TextView
                android:id="@+id/act_detail_pesanan_selesai_pesanan_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_medium_8dp"
                android:textColor="@color/colorTextWhite"
                android:textSize="@dimen/text_size_title_medium_20sp"
                tools:text="123456" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/frogo_rv_dimen_100dp"
            android:src="@drawable/bg_new" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginStart="@dimen/dimen_medium_8dp"
        android:layout_marginEnd="@dimen/dimen_medium_8dp"
        android:background="@drawable/bg_rv"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_medium_8dp"
            android:layout_marginTop="@dimen/dimen_big_16dp"
            android:text="@string/txt_detail_pesanan"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_title_small_18sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_makanan"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="@dimen/text_size_title_small_18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/act_detail_pesanan_selesai_pesanan_main_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/content_list_makanan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_medium_8dp"
                    android:layout_marginTop="@dimen/dimen_big_16dp"
                    android:text="@string/txt_tambahan"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="@dimen/text_size_title_small_18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/act_detail_pesanan_selesai_pesanan_tambahan_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/content_list_makanan" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_medium_8dp"
        android:layout_marginEnd="@dimen/dimen_medium_8dp"
        android:background="@drawable/bg_rv"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_medium_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_medium_8dp"
                android:layout_marginTop="@dimen/dimen_big_16dp"
                android:layout_weight="1"
                android:text="@string/txt_subtotal"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/text_size_title_small_18sp" />

            <TextView
                android:id="@+id/act_detail_pesanan_selesai_pesanan_total_harga"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_medium_8dp"
                android:layout_marginTop="@dimen/dimen_big_16dp"
                android:layout_weight="0.5"
                android:text="@string/dummy_harga"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/text_size_title_small_18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_medium_8dp"
                android:layout_marginTop="@dimen/dimen_big_16dp"
                android:layout_weight="1"
                android:text="@string/txt_delivery"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/text_size_title_small_18sp" />

            <TextView
                android:id="@+id/act_detail_pesanan_selesai_pesanan_harga_delivery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_medium_8dp"
                android:layout_marginTop="@dimen/dimen_big_16dp"
                android:layout_weight="0.5"
                android:text="@string/dummy_harga_delivery"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/text_size_title_small_18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_medium_8dp"
                android:layout_marginTop="@dimen/dimen_big_16dp"
                android:layout_weight="1"
                android:text="@string/txt_total"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_title_small_18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/act_detail_pesanan_selesai_pesanan_harga_totalplus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_medium_8dp"
                android:layout_marginTop="@dimen/dimen_big_16dp"
                android:layout_weight="0.5"
                android:text="@string/dummy_harga_delivery"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/text_size_title_small_18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>